--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ allure {
     version = '2.14.0'
     aspectjweaver = true
     autoconfigure = true
+    configuration = "testImplementation"
+
 
     useJUnit5 {
         version = '2.14.0'
